# libvmod-bodyaccess

./: .travis.yml  Makefile.am  README.rst  configure.ac  example.vcl  vmod-bodyaccess.spec  vmod-example.spec  vmod-transbody.spec
src/: Makefile.am  vmod_bodyaccess.c  vmod_bodyaccess.vcc  vmod_core.c  vmod_core.h  vmod_respbody.c  vmod_transbody.c  vmod_transbody.vcc
src/tests/: test01.vtc  test02.vtc  test03.vtc  test04.vtc  test05.vtc
